--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -2,9 +2,11 @@
 body {
     font-family: 'Open Sans', sans-serif;
 }
+
 .main-color {
     color: #FD6E0A;
 }
+
 .btn-primary {
     border-radius: 5px;
     background: #FD6E0A;
@@ -13,7 +15,19 @@ body {
     font-size: 20px;
     font-weight: 700;
     padding: 15px 35px;
-        
+
+}
+
+.section-title {
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
+}
+
+.section-description {
+    color: #757575;
+    text-align: center;
+    font-size: 18px;
 }
 
 
@@ -32,7 +46,7 @@ nav {
     font-weight: 800;
 }
 
-nav > ul {
+nav>ul {
     display: flex;
     align-items: center;
 }
@@ -51,14 +65,51 @@ nav a {
 
 .header {
     background-color: #FFF8F3;
+    background-image: url('../images/header_bg.png');
+    background-repeat: no-repeat;
+    background-position: bottom right;
 }
 
 .banner {
-    padding: 30px 30px 30px 150px;
+    padding: 30px 30px 0px 150px;
     display: flex;
     align-items: center;
+    justify-content: space-between;
+}
+
+.banner-content {
+    max-width: 500px;
 }
 
 .profile-pic {
     width: 500px;
+}
+
+.banner-greeting {
+    color: #474747;
+    font-size: 45px;
+    margin-bottom: 0px;
+}
+
+.banner-title {
+    font-size: 85px;
+    font-weight: 700;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+
+.banner-description {
+    color: #757575;
+    font-size: 18px;
+}
+
+/* main section styles */
+
+/* about section styles */
+
+.about {
+    padding: 130px;
+    border-radius: 10px;
+    background: #FFF8F3;
+    margin: 130px 0px;
 }
