--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -126,3 +126,19 @@ main {
 .about-info {
     text-align: center;
 }
+
+.info-title {
+    color: #757575;
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.info-description {
+    color:  #474747;
+    font-size: 20px;
+    font-weight: 700;
+}
+
+#what-i-do-description {
+    padding: 30px 150px;
+}
